# rising-dice

./: Available.cpp  Available.hpp  CMakeLists.txt  Choice.cpp  Choice.hpp  Color.hpp  GameState.hpp  displayGameState.cpp  displayGameState.hpp  displaySolverResults.cpp  displaySolverResults.hpp  main_play.cpp  main_test.cpp  miscStrategies.cpp  miscStrategies.hpp  play.cpp  play.hpp  playerStrategy.cpp  playerStrategy.hpp  solve.cpp  solve.hpp  solverStrategy.cpp  solverStrategy.hpp
